# gen-mod-expressive-motion-behavior

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  context.py  core.py  llag_block.py  llag_context.py  llag_core.py  llag_planner.py  llag_timeline.py  llag_virtual_session.py  main.py  new_block.py  new_core.py  new_main.py  new_planner.py  new_robot_base.py  new_timeline.py  planner.py  prompts.yaml  prompts_v4.yaml  requirements.txt  robot_base.py  robot_base_old.py  session.py  test_go2_floating_base.py  timeline.py
animation-dmp-dev-main/: .gitignore  README.md  pyproject.toml
animation-dmp-dev-main/animation_dmp/: __init__.py  dmp.py  multi_dmp.py  phase.py  principles.py
animation-dmp-dev-main/examples/: 1d_complete_rollout copy.py  1d_step_wise_rollout.py  multi_dmp.py  multi_test.py  ydata.txt
kinematic_analysis/: kinematic_analysis.py  kinematic_analysis_with_direct_condition_check_and_long_chains.py  kinematic_analysis_without_direct_check.py
kinova_viser/: default.txt  default_to_zero.txt  dmp_playback_kinova_viser.py  indicate_right_120.txt  keyframes_20250925-203214.txt  keyframes_20250925-210651.txt  keyframes_20250926-122418.txt  keyframes_20250926-124452.txt  keyframes_20250926-125535.txt  keyframes_20250926-131103.txt  keyframes_20250926-131325.txt  keyframes_20250926-131842.txt  keyframes_20250926-132151.txt  keyframes_20250926-132749.txt  keyframes_20250926-133030.txt  keyframes_20250926-191429.txt  keyframes_20250926-191637.txt  kinova_viser.py  playback_kinova_viser.py  point_right.txt  sway_joyful.txt  sway_joyful_120.txt  (+13 more)
(+268 files in other folders)
